[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Shop.gd" type="Script" id=1]
[ext_resource path="res://Scenes/upgrade.png" type="Texture" id=2]
[ext_resource path="res://Scenes/life.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Upgrade" type="Area2D" parent="."]
position = Vector2( -10, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Upgrade"]
position = Vector2( 0, -0.5 )
texture = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="Upgrade"]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 1 )

[node name="LevelCost" type="Label" parent="Upgrade"]
margin_right = 4.0
margin_bottom = 14.0
valign = 1

[node name="Life" type="Area2D" parent="."]
position = Vector2( 10, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Life"]
position = Vector2( 1.19209e-007, 1.19209e-007 )
texture = ExtResource( 3 )

[node name="Collider" type="CollisionShape2D" parent="Life"]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 1 )

[node name="LifeCost" type="Label" parent="Life"]
margin_right = 40.0
margin_bottom = 14.0
align = 1
valign = 1
[connection signal="body_entered" from="Upgrade" to="." method="_on_Upgrade_body_entered"]
[connection signal="body_exited" from="Upgrade" to="." method="_on_Upgrade_body_exited"]
[connection signal="body_entered" from="Life" to="." method="_on_Life_body_entered"]
[connection signal="body_exited" from="Life" to="." method="_on_Life_body_exited"]
